change deepmill html

--- a/projects/deepmill.html
+++ b/projects/deepmill.html
@@ -46,10 +46,10 @@
               <h2 style="color:#12d640">DeepMill: Neural Accessibility Learning for Subtractive Manufacturing</h2>
               <ul>
                 <li>
-                  <a href="https://fanchao98.github.io/" target="_blank"><b>Fanchao Zhong†</b></a>
+                  <a href="https://fanchao98.github.io/" target="_blank">Fanchao Zhong†</a>
                    ,    
                    <sup></sup>    
-                  <a href="" target="_blank">Yang Wang†</a>,
+                  <a href="" target="_blank"><b>Yang Wang†</b></a>,
                    , 
                    <sup></sup>
                   <a href="https://wang-ps.github.io/" target="_blank">Peng-Shuai Wang</a>,
