--- a/projects/deepmill.html
+++ b/projects/deepmill.html
@@ -49,7 +49,7 @@
                   <a href="https://fanchao98.github.io/" target="_blank">Fanchao Zhong†</a>
                    ,    
                    <sup></sup>    
-                  <a href="" target="_blank"><b>Yang Wang†</b></a>,
+                  <a href="https://chfaithwy.github.io/" target="_blank"><b>Yang Wang†</b></a>,
                    , 
                    <sup></sup>
                   <a href="https://wang-ps.github.io/" target="_blank">Peng-Shuai Wang</a>,
